RESOLVED FIXED 162873
Missing include in MediaDescription
https://bugs.webkit.org/show_bug.cgi?id=162873
Summary Missing include in MediaDescription
Enrique Ocaña
Reported 2016-10-03 11:46:21 PDT
Build fails when MediaDesciption.h is included in a file with no other dependencies which already require the AtomicString header.
Attachments
Patch (1.11 KB, patch)
2016-10-03 11:49 PDT, Enrique Ocaña
no flags
Patch (1.13 KB, patch)
2016-10-04 02:57 PDT, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2016-10-03 11:49:14 PDT
Alex Christensen
Comment 2 2016-10-03 14:13:19 PDT
Comment on attachment 290498 [details] Patch Actually, does <wtf/Forward.h> work?
Enrique Ocaña
Comment 3 2016-10-04 02:57:09 PDT
Enrique Ocaña
Comment 4 2016-10-04 02:58:36 PDT
Yes, Forward.h works at the expense of having to include the AtomicString header in the final cpp file. It seems a good compromise.
Xabier Rodríguez Calvar
Comment 5 2016-10-04 06:35:47 PDT
Comment on attachment 290585 [details] Patch For this you wouldn't even need to upload the patch for review. It could be an unreviewed build fix.
Xabier Rodríguez Calvar
Comment 6 2016-10-04 06:36:34 PDT
And it is something you can land now, no need to wait for other MSE changes.
WebKit Commit Bot
Comment 7 2016-10-08 04:57:22 PDT
Comment on attachment 290585 [details] Patch Clearing flags on attachment: 290585 Committed r206952: <http://trac.webkit.org/changeset/206952>
WebKit Commit Bot
Comment 8 2016-10-08 04:57:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.