Missing include in MediaDescription https://bugs.webkit.org/show_bug.cgi?id=162873

Reviewed by Xabier Rodriguez-Calvar.

Added missing header.

* platform/MediaDescription.h:


Canonical link: https://commits.webkit.org/181000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206952 268f45cc-cd09-0410-ab3c-d52691b4dbfc